--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>The Box Model</title>
+<title>Assignment Solution for Module 2</title>
 <style>
 * {
   box-sizing: border-box;
@@ -10,20 +10,18 @@
   padding: 0;
 }
 body {
-  background-color: gray;
+  background-color: white;
 }
-#box {
-  background-color: blue;
+#box
+  background-color: gray;
   padding: 10px;
   border: 5px solid black;
-  width: 300px;
+  width:900px;
   height: 50px;
   margin-top: 50px;
   overflow: auto;
 }
-#content {
-  background-color: #90EE90; /* green */
-}
+
 h1 {
   margin-bottom: 30px;
 }
@@ -31,11 +29,12 @@ h1 {
 </head>
 <body>
 
-<h1>Box Model</h1>
+<h1>Our Menu</h1>
 
 <div id="box">
-  <div id="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis. 
-  </div>
+  <div id="content">Lorem ipsum dolor sit amet, consectetur 
+    adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore mogna aliqua. Utenim ad minim veniam, quis nostrud exercitation ullamco laborisnisi ut alliquip ex ea commodo consequat.
+   
 </div>
 
 
