--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ h1 {
 <div id="box">
   <div id="content">Lorem ipsum dolor sit amet, consectetur 
     adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore mogna aliqua. Utenim ad minim veniam, quis nostrud exercitation ullamco laborisnisi ut alliquip ex ea commodo consequat.
-   
+  </div>
 </div>
 
 
