--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   padding: 0;
 }
 body {
-  background-color: white;
+  background-color: gray;
 }
 #box
-  background-color: gray;
+  background-color: blue;
   padding: 10px;
   border: 5px solid black;
   width:200px;
@@ -21,12 +21,11 @@ body {
   margin-top: 50px;
   overflow: auto;
 }
-#content {
-  background-color: #90EE90; /* green */
-}
+
 h1 {
   margin-bottom: 30px;
 }
+  
 </style>
 </head>
 <body>
@@ -34,8 +33,7 @@ h1 {
 <h1>Our Menu</h1>
 
 <div id="box">
-  <div id="content">Lorem ipsum dolor sit amet, consectetur 
-    adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore mogna aliqua. Utenim ad minim veniam, quis nostrud exercitation ullamco laborisnisi ut alliquip ex ea commodo consequat.
+  <div id="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore mogna aliqua. Utenim ad minim veniam, quis nostrud exercitation ullamco laborisnisi ut alliquip ex ea commodo consequat.
   </div>
 </div>
 
