--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@ body {
   margin-top: 50px;
   overflow: auto;
 }
+#content {
+  background-color: #90EE90; /* green */
+}
 
 h1 {
   margin-bottom: 30px;
