--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
   background-color: blue;
   padding: 10px;
   border: 5px solid black;
-  width:200px;
+  width:300px;
   height: 50px;
   margin-top: 50px;
   overflow: auto;
@@ -36,7 +36,7 @@ h1 {
 <h1>Our Menu</h1>
 
 <div id="box">
-  <div id="content">Lorem .
+  <div id="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
   </div>
 </div>
 
