--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Assignment Solution for Module 2</title>
+<title>The Box Model</title>
 <style>
 * {
   box-sizing: border-box;
@@ -16,7 +16,7 @@ body {
   background-color: blue;
   padding: 10px;
   border: 5px solid black;
-  width:300px;
+  width: 300px;
   height: 50px;
   margin-top: 50px;
   overflow: auto;
@@ -24,19 +24,17 @@ body {
 #content {
   background-color: #90EE90; /* green */
 }
-
 h1 {
   margin-bottom: 30px;
 }
-  
 </style>
 </head>
 <body>
 
-<h1>Our Menu</h1>
+<h1>Box Model</h1>
 
 <div id="box">
-  <div id="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+  <div id="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis. 
   </div>
 </div>
 
