--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>The Box Model</title>
+<title>Assignment Solution for Module 2</title>
 <style>
 * {
   box-sizing: border-box;
@@ -31,7 +31,7 @@ h1 {
 </head>
 <body>
 
-<h1>Box Model</h1>
+<h1>Our Menu</h1>
 
 <div id="box">
   <div id="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit error quis ab perspiciatis eos inventore recusandae iste itaque numquam facilis, tenetur. Doloribus officiis quae facilis, nisi, ex similique. Animi, perferendis. 
